--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,10 +12,14 @@ jobs:
   package-and-run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: setup java 18
+        uses: actions/setup-java@v3
         with:
           java-version: 18
           distribution: 'temurin'
-      - run: mvn package
-      - run: cd target && java -jar pr-comment-summary-1.0-SNAPSHOT.jar ${{ github.event.inputs.repo }}
+      - name: build
+        run: mvn package
+      - name: java run
+        run: cd target && java -jar pr-comment-summary-1.0-SNAPSHOT.jar ${{ github.event.inputs.repo }}
